--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 	<title>Basic HTML</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" name="viewport", content="width=device-width", initial-scale="1"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
+
 </head>
 <body>
-	<h1>You're Building an awesome site!</h1>
+	<h1>You're Building an awesome website!</h1>
+  <script src = "/javascripts/jquery-3.1.1.min.js" />
+  <script src = "/javascripts/bootstrap.min.js" />
 </body>
 </html>
