--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,23 @@
 
 </head>
 <body>
-	<h1>You're Building an awesome website!</h1>
+	<header>
+      <div class = "row">
+        <div class = "col-sm-8">
+          Multi Purpose Assitant
+        </div>
+
+        <nav class = "col-sm-4">
+          <li>
+        </div>
+
+      </div>
+  </header>
+
+  <footer>
+
+  </footer>
+
   <script src = "/javascripts/jquery-3.1.1.min.js" />
   <script src = "/javascripts/bootstrap.min.js" />
 </body>
