--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,6 +69,15 @@ header {
   margin:5px 10px;
 }
 
+
+#proximityValue, #temperatureValue, #soundValue {
+
+  font-family: 'Roboto', Helvetica, sans-serif;
+  font-size: 64px;
+  text-align: center;
+  padding: 10px;
+}
+
 ul {
   padding: 0px;
   font-size: 16px;
